# pytypehint

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: atoms.md  build.md  comparison.md  defaults.md  philosophy.md  resolve.md  restrictions.md  vocabulary.md
src/pytypehint/: __init__.py  atoms.py  bridge.py  errors.py  shapes.py  signature.py  structure.py  utils.py  validation.py
tests/: test_annotated.py  test_annotated_hoisting_properties.py  test_atom_table_reflection.py  test_atoms.py  test_bool.py  test_bridge.py  test_build.py  test_certification.py  test_collection_and_recursion_matrix.py  test_composition.py  test_datetime.py  test_default_types.py  test_discriminated_wrapper.py  test_discriminator.py  test_documentation_contract.py  test_enum.py  test_equality.py  test_errors_pickle.py  test_extra.py  test_extra1.py  test_extra10.py  test_extra6.py  test_extra7.py  test_field_dataclass_surface.py  test_final_restrictions.py  test_float.py  test_initvar_rejection.py  test_instance_validation_and_homonym_enums.py  test_int.py  test_list.py  test_literal.py  test_matches_no_option_notes.py  test_missing.py  test_none.py  test_none_transparency.py  test_numeric_constraint_validation.py  test_optional_toggle.py  test_presentation_atoms_surface.py  test_recursive.py  test_remat_runtime_failure.py  (+23 more)
