[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytypehint"
dynamic = ["version"]
description = "Compiles Python type hints into strict, inspectable schemas"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Beltrán Offerrall" }]
dependencies = []

[project.optional-dependencies]
dev = ["mypy", "pytest"]

[tool.hatch.version]
path = "src/pytypehint/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pytypehint"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
